thursday / before lunch

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,10 @@
           var datemilli = Date.parse('Sun May 11,2014');
           console.log(taskDate(datemilli));
         </script>-->
-        <p class="card-text"><i class="far fa-clock pr-2"></i>{{createdDate}}</p>
+        <p class="card-text"><svg class="bi bi-clock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M8 15A7 7 0 108 1a7 7 0 000 14zm8-7A8 8 0 110 8a8 8 0 0116 0z" clip-rule="evenodd"/>
+  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 01.5.5v5.21l3.248 1.856a.5.5 0 01-.496.868l-3.5-2A.5.5 0 017 9V3.5a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+</svg>  {{createdDate}}</p>
       </div>
     </div>
     <!-- Card image -->
@@ -40,12 +43,8 @@
         <!-- Button -->
         <div>
           <div>
-            <a class="btn btn-link stretched-link" href="/places/{{_id}}"><!--<i class="fas fa-arrow-right"></i>-->→</a>
+            <a class="btn btn-link stretched-link" href="/places/{{_id}}">Read More</a>
           </div>
-          <!--<div>
-            <i class="fas fa-share-alt float-right" data-toggle="tooltip" data-placement="top" title="Share this post"></i>
-            <i class="fas fa-heart float-right " data-toggle="tooltip" data-placement="top" title="I like it"></i>
-          </div>-->
         </div>
       </div>
     </div>
