--- a/views/places/single.hbs
+++ b/views/places/single.hbs
@@ -7,11 +7,13 @@
     <div class="col-6">
       <img class="img-list" src="{{pictureUrl}}"/>
       <p>{{ description }}</p>
+      
       <!--SEE ALL COMMENTS FORM-->
       <div class="row" >
-      <form action="/comments/place/{{ _id }}" method="GET" style="margin-right: 25px;">
+      <form action="/comments/{{ _id }}" method="GET" style="margin-right: 25px;">
        <button class="btn btn-primary btn-sm"><i class="fa fa-thumbs-up"></i>See all Comments</button>
        </form>
+
       <!--LIKE FORM-->
       <form action="/places/like/{{_id }}" method="POST">
        <button class="btn btn-primary btn-sm"><i class="fa fa-thumbs-up"></i>Like</button>
@@ -24,7 +26,6 @@
 <!--IF IT'S THE OWNER OF THE PLACE SHOW UPDATE AND DELETE OPTIONS-->
       {{#if post.isOwner}}
       <div>
-      <p>Will show the last 3 comments and a link to see all comments</p>
       <button class="btn btn-link"><a href="/places/update/{{ place._id }}">Update Details</a></button>
        <!--new thing-->
         <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal">Delete Post</button>
@@ -32,7 +33,7 @@
       {{else}}
       <!--Comment-->
       <div>
-<form action="/comments/place/{{ _id }}" method="POST">
+<form action="/comments/place/{{ place._id }}" method="GET">
   <label for="message-input">Post Comment</label><br>
   <textarea id="message-input" name="message" placeholder="Post Comment"></textarea><br>
 
