--- a/views/places/comments.hbs
+++ b/views/places/comments.hbs
@@ -1,24 +1,18 @@
-
-
 {{#if comment}}
 
 {{#with comment.[0]}}
 <h1> All {{place.name}}'s Comments</h1>
 
 <form action="/comments/create/{{place._id}}" method="POST">
-  <label for="message">Post Comment</label><br>
-  <textarea id="message" name="message" placeholder="Post Comment"></textarea><br>
-
-  <button>Submit Comment</button>
+  <textarea class="form-control" id="message" rows="3" name="message" placeholder="Post Comment"></textarea>
+  <button class="btn btn-primary mt-3">Submit Comment</button>
 </form>
 {{/with}}
 {{else}}
 
 <form action="/comments/create/{{place}}" method="POST">
-  <label for="message">Post Comment</label><br>
-  <textarea id="message" name="message" placeholder="Post Comment"></textarea><br>
-
-  <button>Submit Comment</button>
+  <textarea class="form-control" id="message" rows="3" name="message" placeholder="Post Comment"></textarea>
+  <button class="btn btn-primary mt-3">Submit Comment</button>
 </form>
 
  {{/if}}
