--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
           {{#if user}}
             <a href="/places/map">Map</a>
             <a href="/">Feed</a> <!--Number of places can point to COUNT of user posts-->
-            <a href="/places/my-list">My Places</a>
+            <a href="/places/my-list">My Posts</a>
             <a href="/profile/{{ user._id }}">Profile</a>
             <form class="form-check form-check-inline" action="/authentication/sign-out" method="POST">
               <button>Sign Out</button>
