Resolving commnt problems

--- a/views/places/singleComment.hbs
+++ b/views/places/singleComment.hbs
@@ -39,7 +39,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Nevermind!</button>
-        <form action="/comments/delete/{{ comment._id }}" method="POST">
+        <form action="/comments/delete/{{ _id }}" method="POST">
           <button class="btn btn-primary">Yes, Delete</button>
         </form>
       </div>
