--- a/views/places/editComment.hbs
+++ b/views/places/editComment.hbs
@@ -2,7 +2,7 @@
 
 <form class="container" enctype="multipart/form-data" method="POST">
 
-<textarea required id="description-input" name="description">{{ comment.message }}</textarea><br>
+<textarea required id="message" name="message">{{ comment.message }}</textarea><br>
 
 <button class="btn btn-primary btn-sm">Update comment</button>
 </form>
