--- a/views/places/create.hbs
+++ b/views/places/create.hbs
@@ -1,3 +1,6 @@
+<div class="page">
+<h2>Creating new Place</h2>
+</div>
 <form class="container" enctype="multipart/form-data" method="POST">
   <!--DIV 1-->
   <div class="row mt-4">
