--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,5 +1,6 @@
+<div class="page">
 <h2>Update Your Details</h2>
-
+</div>
 <form action="" method="POST" enctype="multipart/form-data">
 
   <div class="form-group">
