--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,4 +1,6 @@
+<div class="page">
 <h2>{{user.name}}'s Profile</h2>
+</div>
 <div class="row">
 <img class="img-profile" src="{{user.picture}}" alt='user profile image' />
 <br>
@@ -12,12 +14,12 @@
 {{/if}}
 </div>
 </div>
-<div class="flex-column">
-  <div>
-    <button type="button" class="btn btn-link"><a href="/profile/edit/{{user._id}}">Update Details</a></button>
+<div class="row" style="justify-content:center;">
+  <div style="margin-right: 40px">
+    <button type="button" class="mt-5 btn btn-primary"><a href="/profile/edit/{{user._id}}">Update Details</a></button>
   </div>
   <div>
-    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal">Delete my Account</button>
+    <button type="button" class="mt-5 btn btn-primary" data-toggle="modal" data-target="#exampleModal">Delete my Account</button>
   </div>
 </div>
 
@@ -44,4 +46,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
