--- a/views/places/map.hbs
+++ b/views/places/map.hbs
@@ -1,8 +1,9 @@
+<div class="page">
 <h2>Art Map</h2>
-<p>This map displays all the user-submitted street art.</p>
+<p>This map displays all the user-submitted street art. Double click on a marker for more informations.</p>
 
 <div id="map-container"></div>
-
+</div>
 <script>
   const placeArray = [
   {{#each places}}
