--- a/views/places/my-list.hbs
+++ b/views/places/my-list.hbs
@@ -1,12 +1,71 @@
-<h2>Your Posts</h2>
+<div class="page">
+<h2>My Gallery</h2>
+<a class="mt-5 btn btn-primary" style="width: 50%" href="/places/create">New Post</a>
 
+<!--
 {{#each places}}
+
   <div>
     <a href="/places/{{_id}}">{{name}}</a><br>
     <a href="/places/{{_id}}"><img class="img-list" src="{{pictureUrl}}" /></a>
     <small>Created at: {{createdDate}}</small>
+    <br>
+    <hr>
+    <br>
   </div>
-{{/each}}
+{{/each}}-->
 
-<a class="mt-5 btn btn-primary" href="/places/create">New Post</a>
+<div class="card-columns pt-5">
+  {{#each places}}
+  <!-- Card -->
+  <div class="card promoting-card shadow-sm">
+    <!-- Card content -->
+    <div class="card-body d-flex flex-row">
+      <!-- Avatar -->
+      <img src="{{creator.picture}}" class="avatar-img" height="50px" width="50px" alt="avatar">
+      <!-- Content -->
+      <div>
+        <!-- Title -->
+        <h4 class="card-title font-weight-bold mb-2">{{ name }}</h4>
+        <!-- Subtitle -->
+        <!--DATE FORMATTING
+        <script>
+          Handlebars.registerHelper('readableDate' function (dateMilli) {
+          var d = (new Date(dateMilli) + '').split(' ');
+          d[2] = d[2] + ',';
+          return [d[0], d[1], d[2], d[3]].join(' ');
+          }
+          var datemilli = Date.parse('Sun May 11,2014');
+          console.log(taskDate(datemilli));
+        </script>-->
+        <p class="card-text"><svg class="bi bi-clock" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M8 15A7 7 0 108 1a7 7 0 000 14zm8-7A8 8 0 110 8a8 8 0 0116 0z" clip-rule="evenodd"/>
+  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 01.5.5v5.21l3.248 1.856a.5.5 0 01-.496.868l-3.5-2A.5.5 0 017 9V3.5a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+</svg>  {{createdDate}}</p>
+      </div>
+    </div>
+    <!-- Card image -->
+    <div class="view overlay">
+      <img class="card-img-top rounded-0" src="{{pictureUrl}}" alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+    <!-- Card content -->
+    <div class="card-body">
+      <div>
+        <!-- Text -->
+        <p>{{ description }}</p>
+        <!-- Button -->
+        <div>
+          <div>
+            <a class="btn btn-link stretched-link" href="/places/{{_id}}">See Post</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+</div>
+</div>
 
