--- a/views/partial/commentlist.hbs
+++ b/views/partial/commentlist.hbs
@@ -7,7 +7,7 @@
   <p><strong>{{creator.name}}</strong> <small>commented:</small></p>
 
 <p>{{message}}</p>
-<small>Posted on: {{createdDate}}</small>
+<small>Posted on: {{ commentDate createdDate }}</small>
 
 </div>
 </div>
