--- a/views/places/directions.hbs
+++ b/views/places/directions.hbs
@@ -1,11 +1,11 @@
 {{#with place}}
-<div style="text-align:left" class="page mb-3"> 
+<div style="text-align:center" class="page mb-3"> 
 <h2>{{name}}'s Art Directions</h2>
 </div>
-<div style="text-align:left">
+<div style="text-align:center">
 <div>
   <p><strong> Step 1:</strong> Locate yourself</p>
-  <div style="text-align:left" >
+  <div style="text-align:center" >
  <button onclick="getLocation()"   class="btn btn-primary btn-sm" >Get my Location</button>
  <p id="checkUser" style="color: green;"></p>
  </div>
