--- a/views/places/map.hbs
+++ b/views/places/map.hbs
@@ -1,6 +1,6 @@
 <div class="page">
 <h2>Art Map</h2>
-<p>This map displays all the user-submitted street art. Double click on a marker for more informations.</p>
+<p>This map displays all the user-submitted street art. Double click on a marker for more information.</p>
 
 <div id="map-container"></div>
 </div>
