--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -19,11 +19,8 @@ body {
   margin: 0 auto;
 }
 
-.collapse-content .fa.fa-heart:hover {
-  color: #f44336 !important;
-}
-.collapse-content .fa.fa-share-alt:hover {
-  color: #0d47a1 !important;
+p.small {
+  line-height: 1;
 }
 
 /*body {
