--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,18 +45,18 @@
     <footer class="container row ceb pt-5 mt-5 mb-5 border-top" >
       <div style="text-align:center" class="col-4">
         <h6 class="pb-1">LEARN</h6>
-        <p><a class="text-muted" href="#">About</a></p>
-        <p class="pt-1"><a class="text-muted" href="https://www.termsfeed.com/live/4563de00-e810-48b0-ab1c-64361ee76593" target="_blank">Terms</a></p>
+        <p class="small"><a class="text-muted" href="#">About</a></p>
+        <p class="small"><a class="text-muted" href="https://www.termsfeed.com/live/4563de00-e810-48b0-ab1c-64361ee76593" target="_blank">Terms</a></p>
       </div>
       <div style="text-align:center" class="col-4">
         <h6 class="pb-1">SAY</h6>
-        <p><a class="text-muted" href="/contact">Contact</a></p>
-        <p><a class="text-muted" href="/contact">FAQ</a></p>
+        <p class="small"><a class="text-muted" href="/contact">Contact</a></p>
+        <p class="small"><a class="text-muted" href="/contact">FAQ</a></p>
       </div>
       <div style="text-align:center" class="col-4">
         <h6 class="pb-1">NETWORK</h6>
-        <p><a class="text-muted" href="https://www.linkedin.com/in/michael-gaeta/" target="_blank">Michael Gaeta</a></p>
-        <p class="pt-1"><a class="text-muted" href="https://www.linkedin.com/in/fabiofsguerreiro/" target="_blank">Fábio Guerreiro</a></p>
+        <p class="small"><a class="text-muted" href="https://www.linkedin.com/in/michael-gaeta/" target="_blank">Michael Gaeta</a></p>
+        <p class="small"><a class="text-muted" href="https://www.linkedin.com/in/fabiofsguerreiro/" target="_blank">Fábio Guerreiro</a></p>
       </div>
       <!--<div class="col-3">
         <h6>Follow</h6>
